fixed alignment

--- a/css/cookieStyles.css
+++ b/css/cookieStyles.css
@@ -1,6 +1,6 @@
 body {
-  background: rgb(22,33,43);
-  background: linear-gradient(180deg, rgba(22,33,43,0.7) 2%, rgba(22, 26, 29, 0.925) 100%);
+  background: rgb(22,26,29);
+  background: linear-gradient(0deg, rgba(22,26,29,0.92) 83%, rgba(22,33,43,0.7) 100%);
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -17,6 +17,7 @@ header {
 main {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex: 1; /* Allow main to take up remaining space */
   overflow: hidden; /* Prevent overflow of main */
 }
@@ -34,6 +35,7 @@ main {
   height: 200px;
   transition: all 0.2s;
   border-radius: 15px;
+  box-shadow: 2px 4px 20px #000 ;
 }
 
 #increment-btn:active {
